--- a/html/home.html
+++ b/html/home.html
@@ -1,23 +1,4 @@
-<div class="navbar navbar-fixed-top navbar-default" role="navigation">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Project name</a>
-        </div>
-        <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </div>
-        <!-- /.nav-collapse -->
-    </div>
-    <!-- /.container -->
+<div style="margin-bottom:90px;" ng-include="'html/header.html'" ng-hide="headerCheck">
 </div>
 <!-- /.navbar -->
 
@@ -52,13 +33,30 @@
              <li>
                  <a href="#">Contact</a>
              </li>
+             
+
+        <li class="treeview">
+        <a href="#">
+          <i class="fa fa-pie-chart"></i>
+          <span>Charts</span>
+          <span class="pull-right-container">
+            <i class="fa fa-angle-left pull-right"></i>
+          </span>
+        </a>
+        <ul class="treeview-menu">
+          <li><a href="pages/charts/chartjs.html"><i class="fa fa-circle-o"></i> ChartJS</a></li>
+          <li><a href="pages/charts/morris.html"><i class="fa fa-circle-o"></i> Morris</a></li>
+          <li><a href="pages/charts/flot.html"><i class="fa fa-circle-o"></i> Flot</a></li>
+          <li><a href="pages/charts/inline.html"><i class="fa fa-circle-o"></i> Inline charts</a></li>
+        </ul>
+      </li>
          </ul>
      </div>
      <!-- /#sidebar-wrapper -->
 
      <!-- Page Content -->
      <div id="page-content-wrapper">
-         <div class="container-fluid">
+       <div class="container-fluid">
              <div class="row">
                  <div class="col-lg-12">
                      <h1>Simple Sidebar</h1>
@@ -72,6 +70,7 @@
      <!-- /#page-content-wrapper -->
 
  </div>
+
  <!-- /#wrapper -->
   <!-- Menu Toggle Script -->
  <script>
