--- a/index.html
+++ b/index.html
@@ -11,10 +11,18 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.0/angular-ui-router.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"></script>
 <link rel="stylesheet" href="css/style.css"/>
 <link rel="stylesheet" href="css/sidebar.css"/>
 <script src="app.js"></script>
+
 <script src="js/LoginCTRL.js"></script>
+<script src="js/AboutCTRL.js"></script>
+<script src="js/ClientCTRL.js"></script>
+<script src="js/ContactCTRL.js"></script>
+<script src="js/DashboardCTRL.js"></script>
+<script src="js/HomeCTRL.js"></script>
+
 </head>
 <body ng-app="myApp" style="margin-top=50px;">
 <div data-ui-view></div>
