--- a/html/header.html
+++ b/html/header.html
@@ -6,16 +6,16 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Project name</a>
+            <a class="navbar-brand" href="#">ShadowFax</a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#!/home">Home</a></li>
+                <li><a href="#!/home">Home</a></li>
                 <li><a href="#!/about">About</a></li>
                 <li><a href="#!/contact">Contact</a></li>
                 <li><a href="#!/client">Client</a></li>
                 <li><a href="#!/dashboard">Dashboard</a></li>
-                <li class="pull-left"><a href="#!/logout">Logout</a></li>
+                <li><a href="#!/logout">Logout</a></li>
             </ul>
         </div>
         <!-- /.nav-collapse -->
