--- a/html/login.html
+++ b/html/login.html
@@ -1,12 +1,20 @@
 <div class="login-form container">
-    <form action="/examples/actions/confirmation.php" method="post">
+    <form name="MyForm">
         <h2 class="text-center">Log in</h2>
         <div class="form-group">
-            <input type="text" class="form-control" placeholder="Username" required="required">
+            <input type="text" class="form-control" name="username" ng-model="username" placeholder="Username" ng-required="true">
         </div>
+        <span class="help-block" ng-show="(submitted || MyForm.username.$touched) && MyForm.username.$error.required && MyForm.username.$invalid"><font color="#FF5B37"><strong>
+                     Username is required.</strong></font></span>
+
+
         <div class="form-group">
-            <input type="password" class="form-control" placeholder="Password" required="required">
+            <input type="password" class="form-control" name="password" ng-model="password" placeholder="Password" required="required">
         </div>
+        <span class="help-block" ng-show="(submitted || MyForm.password.$touched) && MyForm.password.$error.required && MyForm.password.$invalid"><font color="#FF5B37"><strong>
+                     Password is required.</strong></font></span>
+
+
         <div class="form-group">
             <button type="button" class="btn btn-primary btn-block" ng-click="login()">Log in</button>
         </div>
@@ -16,4 +24,29 @@
         </div>
     </form>
     <p class="text-center"><a href="#">Create an Account</a></p>
+</div>
+
+
+
+
+<div class="modal fade" id="modal" role="dialog">
+    <div class="modal-dialog">
+
+<!-- Modal content-->
+<div class="modal-content">
+    <div class="modal-header">
+	<button type="button" class="close" data-dismiss="modal" ng-click = "ok()">&times;</button>
+	<h4 class="modal-title">Info</h4>
+    </div>
+    <div class="modal-body">
+	<p>Invalid Credentials</p>
+    </div>
+    <div class="modal-footer">
+	<button type="button" class="btn btn-danger" data-dismiss="modal" ng-click = "ok()">
+		OK</button>
+
+    </div>
+</div>
+
+    </div>
 </div>
