toggle , routing and few fixes

--- a/html/dominos.html
+++ b/html/dominos.html
@@ -3,8 +3,8 @@
   <!-- Content Header (Page header) -->
   <section class="content-header">
     <h1>
-      Home
-      <small>Home panel</small>
+      Dominos
+      <small>Dominos panel</small>
     </h1>
   </section>
 
