--- a/html/flipkart.html
+++ b/html/flipkart.html
@@ -3,8 +3,8 @@
   <!-- Content Header (Page header) -->
   <section class="content-header">
     <h1>
-      Home
-      <small>Home panel</small>
+      Flipkart
+      <small>Flipkart panel</small>
     </h1>
   </section>
 
