--- a/html/amazon.html
+++ b/html/amazon.html
@@ -3,8 +3,8 @@
   <!-- Content Header (Page header) -->
   <section class="content-header">
     <h1>
-      Home
-      <small>Home panel</small>
+      Amazon
+      <small>Amazon panel</small>
     </h1>
   </section>
 
