--- a/html/box8.html
+++ b/html/box8.html
@@ -3,8 +3,8 @@
   <!-- Content Header (Page header) -->
   <section class="content-header">
     <h1>
-      Home
-      <small>Home panel</small>
+      Box8
+      <small>Box8 panel</small>
     </h1>
   </section>
 
