--- a/html/header.html
+++ b/html/header.html
@@ -1,24 +1,53 @@
-<div class="navbar navbar-fixed-top navbar-default" role="navigation">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">ShadowFax</a>
-        </div>
-        <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="#!/home">Home</a></li>
-                <li><a href="#!/about">About</a></li>
-                <li><a href="#!/contact">Contact</a></li>
-                <li><a href="#!/client">Client</a></li>
-                <li><a href="#!/dashboard">Dashboard</a></li>
-                <li><a href="#!/logout">Logout</a></li>
-            </ul>
-        </div>
-        <!-- /.nav-collapse -->
+<header class="main-header">
+  <!-- Logo -->
+  <a href="" class="logo">
+    <!-- mini logo for sidebar mini 50x50 pixels -->
+    <span class="logo-mini"><b>SF</b></span>
+    <!-- logo for regular state and mobile devices -->
+    <span class="logo-lg"><b>ShadowFax</b></span>
+  </a>
+  <!-- Header Navbar: style can be found in header.less -->
+  <nav class="navbar navbar-static-top">
+    <!-- Sidebar toggle button-->
+    <a class="sidebar-toggle" data-toggle="push-menu" role="button">
+      <span class="sr-only">Toggle navigation</span>
+    </a>
+
+    <div class="navbar-custom-menu">
+      <ul class="nav navbar-nav">
+        <!-- Messages: style can be found in dropdown.less-->
+        <li class="dropdown messages-menu">
+          <a href="" class="dropdown-toggle" data-toggle="dropdown">
+           Home
+          </a>
+
+        </li>
+        <!-- Notifications: style can be found in dropdown.less -->
+        <li class="dropdown notifications-menu">
+          <a href="" class="dropdown-toggle" data-toggle="dropdown">
+            Contact
+          </a>
+
+        </li>
+        <!-- Tasks: style can be found in dropdown.less -->
+        <li class="dropdown tasks-menu">
+          <a href="" class="dropdown-toggle" data-toggle="dropdown">
+            About
+          </a>
+
+        </li>
+        <!-- User Account: style can be found in dropdown.less -->
+        <li class="dropdown user user-menu">
+          <a href="" class="dropdown-toggle" data-toggle="dropdown">
+            <img src="https://media.licdn.com/media/AAMAAwDGAAoAAQAAAAAAAA3aAAAAJGU0YWMwNWJiLTA4MGMtNGMzOS1iOGQwLTgyZmRlMTQwZDBlNw.png" class="user-image" alt="User Image">
+            <span class="hidden-xs">ShadowFax</span>
+          </a>
+        </li>
+        <!-- Control Sidebar Toggle Button -->
+        <li>
+          <a href="#" data-toggle="control-sidebar"><i class="fa fa-sign-out"></i></a>
+        </li>
+      </ul>
     </div>
-    <!-- /.container -->
-</div>
+  </nav>
+</header>
