--- a/html/swiggy.html
+++ b/html/swiggy.html
@@ -3,8 +3,8 @@
   <!-- Content Header (Page header) -->
   <section class="content-header">
     <h1>
-      Home
-      <small>Home panel</small>
+      Swiggy
+      <small>Swiggy panel</small>
     </h1>
   </section>
 
