--- a/html/zomato.html
+++ b/html/zomato.html
@@ -3,8 +3,8 @@
   <!-- Content Header (Page header) -->
   <section class="content-header">
     <h1>
-      Home
-      <small>Home panel</small>
+      Zomato
+      <small>Zomato panel</small>
     </h1>
   </section>
 
