--- a/html/header.html
+++ b/html/header.html
@@ -17,7 +17,7 @@
       <ul class="nav navbar-nav">
         <!-- Messages: style can be found in dropdown.less-->
         <li class="dropdown messages-menu">
-          <a href="" class="dropdown-toggle" data-toggle="dropdown">
+          <a href="#!/home" class="dropdown-toggle" data-toggle="dropdown">
            Home
           </a>
 
