--- a/html/header.html
+++ b/html/header.html
@@ -39,7 +39,7 @@
         <!-- User Account: style can be found in dropdown.less -->
         <li class="dropdown user user-menu">
           <a href="" class="dropdown-toggle" data-toggle="dropdown">
-            <img src="https://media.licdn.com/media/AAMAAwDGAAoAAQAAAAAAAA3aAAAAJGU0YWMwNWJiLTA4MGMtNGMzOS1iOGQwLTgyZmRlMTQwZDBlNw.png" class="user-image" alt="User Image">
+            <img src="../image/shadowfax-logo.jpg" class="user-image" alt="User Image">
             <span class="hidden-xs">ShadowFax</span>
           </a>
         </li>
