--- a/html/home.html
+++ b/html/home.html
@@ -4,10 +4,12 @@
   <section class="content-header">
     <h1>
       Hello, Welcome to Home Page
-      <small>(Home panel)</small>
+      <small>(Home panel : Redirected using UI-Routing)</small>
     </h1>
-    <h5>Below table shows the clients of ShadowFax</h5>
+    <h5>Below table shows the clients of ShadowFax (FakeData)</h5>
   </section>
+  <img style="margin-top:20px;" class="img-responsive center-block" src="../image/shadowfax.jpg" width="40%">
+
 
   <!-- Main content -->
   <section class="content">
@@ -15,15 +17,15 @@
 <thead class="thead-dark">
   <tr>
     <th scope="col">ID</th>
-    <th scope="col">First</th>
-    <th scope="col">Last</th>
+    <th scope="col">Name</th>
+    <th scope="col">Location</th>
   </tr>
 </thead>
 <tbody>
   <tr ng-repeat="item in fakeData">
     <th scope="row">{{item.id}}</th>
-    <td>{{item.firstname}}</td>
-    <td>{{item.lastname}}</td>
+    <td>{{item.name}}</td>
+    <td>{{item.location}}</td>
   </tr>
 </tbody>
 </table>
