Code Beautify and Added Readme

--- a/html/footer.html
+++ b/html/footer.html
@@ -3,8 +3,7 @@
   <div class="pull-right hidden-xs">
     <b>Version</b> 1.0.0
   </div>
-  <strong>Copyright &copy; 2014-2018 <a href="https://shadowfax.in">ShadowFax</a>.</strong> All rights
-  reserved.
+  <strong>Copyright &copy; 2014-2018 <a href="https://shadowfax.in">ShadowFax</a>.</strong> All rights reserved.
 </footer>
 
 <!-- Control Sidebar -->
