--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-<title>Bootstrap Simple Login Form</title>
-<script type='text/javascript' src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+  <title>ShadowFax</title>
+  <link rel="icon" href="./image/shadowfax-logo.jpg" type="image/gif" sizes="16x16">
+  <script type='text/javascript' src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
 
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-   <script type='text/javascript' src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-   <script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-   <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/admin-lte/2.4.2/js/adminlte.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script type='text/javascript' src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+  <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/admin-lte/2.4.2/js/adminlte.min.js"></script>
 
-   <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.0/angular-ui-router.js"></script>
+  <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.0/angular-ui-router.js"></script>
 
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/admin-lte/2.4.2/css/AdminLTE.min.css">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/admin-lte/2.4.2/css/skins/_all-skins.min.css">
-   <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/admin-lte/2.4.2/css/AdminLTE.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/admin-lte/2.4.2/css/skins/_all-skins.min.css">
+  <link rel="stylesheet" href="css/style.css" />
 
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
 
 
   <script src="app.js"></script>
@@ -29,11 +31,12 @@
   <script src="js/ZomatoCTRL.js"></script>
   <script src="js/Box8CTRL.js"></script>
   <script src="js/DominosCTRL.js"></script>
-   <script src="js/LoginCTRL.js"></script>
-   <script src="js/HomeCTRL.js"></script>
+  <script src="js/LoginCTRL.js"></script>
+  <script src="js/HomeCTRL.js"></script>
 
 
 </head>
+
 <body class="hold-transition skin-blue sidebar-mini" ng-controller="indexCtrl" ng-app="myApp">
   <div ng-show="sidebarHeaderFooter" ng-include="'html/header.html'"></div>
   <div ng-show="sidebarHeaderFooter">
@@ -98,14 +101,15 @@
     </aside>
 
   </div>
-<div data-ui-view></div>
+  <div data-ui-view></div>
 
-<div ng-show="sidebarHeaderFooter" ng-include="'html/footer.html'"></div>
+  <div ng-show="sidebarHeaderFooter" ng-include="'html/footer.html'"></div>
 
-<script>
-app.controller("indexCtrl",function($scope){
-  $scope.sidebarHeaderFooter = false;
-})
-</script>
+  <script>
+    app.controller("indexCtrl", function($scope) {
+      $scope.sidebarHeaderFooter = false;
+    })
+  </script>
 </body>
+
 </html>
