--- a/html/header.html
+++ b/html/header.html
@@ -45,7 +45,7 @@
         </li>
         <!-- Control Sidebar Toggle Button -->
         <li>
-          <a href="#" data-toggle="control-sidebar"><i class="fa fa-sign-out"></i></a>
+          <a href="#" data-toggle="control-sidebar">Logout</a>
         </li>
       </ul>
     </div>
