Updated Readme file and few fix for firebase

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <title>ShadowFax</title>
   <link rel="icon" href="./image/shadowfax-logo.jpg" type="image/gif" sizes="16x16">
-  <script type='text/javascript' src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script type='text/javascript' src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script type='text/javascript' src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
